--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/recharts": "^1.8.24",
     "apexcharts": "^3.37.3",
     "eslint": "8.37.0",
     "eslint-config-next": "13.3.0",
@@ -16,6 +17,8 @@
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
     "react-dom": "^18.2.0",
+    "react-google-charts": "^4.0.0",
+    "recharts": "^2.5.0",
     "sass": "^1.61.0",
     "typescript": "5.0.3"
   },
