--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   "dependencies": {
     "@types/recharts": "^1.8.24",
     "apexcharts": "^3.37.3",
+    "bcryptjs": "^2.4.3",
     "eslint": "8.37.0",
     "eslint-config-next": "13.3.0",
+    "jsonwebtoken": "^9.0.0",
     "next": "13.3.0",
+    "next-auth": "^4.22.0",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
     "react-dom": "^18.2.0",
@@ -23,6 +26,8 @@
     "typescript": "5.0.3"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
+    "@types/jsonwebtoken": "^9.0.1",
     "@types/node": "^18.15.11",
     "@types/react": "^18.0.33",
     "@types/react-dom": "^18.0.11"
