--- a/package.json
+++ b/package.json
@@ -15,21 +15,21 @@
     "eslint": "8.37.0",
     "eslint-config-next": "13.3.0",
     "jsonwebtoken": "^9.0.0",
-    "next": "13.3.0",
+    "next": "^13.3.0",
     "next-auth": "^4.22.0",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
     "react-dom": "^18.2.0",
     "react-google-charts": "^4.0.0",
     "recharts": "^2.5.0",
-    "sass": "^1.61.0",
-    "typescript": "5.0.3"
+    "sass": "^1.61.0"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
     "@types/jsonwebtoken": "^9.0.1",
-    "@types/node": "^18.15.11",
-    "@types/react": "^18.0.33",
-    "@types/react-dom": "^18.0.11"
+    "@types/node": "^18.16.1",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.0.11",
+    "typescript": "^5.0.4"
   }
 }
