--- a/package.json
+++ b/package.json
@@ -11,16 +11,19 @@
   "dependencies": {
     "@types/recharts": "^1.8.24",
     "apexcharts": "^3.37.3",
+    "axios": "^1.4.0",
     "bcryptjs": "^2.4.3",
     "eslint": "8.37.0",
     "eslint-config-next": "13.3.0",
     "jsonwebtoken": "^9.0.0",
     "next": "^13.3.0",
     "next-auth": "^4.22.0",
+    "nookies": "^2.5.2",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
     "react-dom": "^18.2.0",
     "react-google-charts": "^4.0.0",
+    "react-select": "^5.7.2",
     "recharts": "^2.5.0",
     "sass": "^1.61.0"
   },
